# Pawly

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml
miniapp/: index.html
src/: config.py
src/bot/: bot.py
src/bot/handlers/: admin.py  callbacks.py  message.py  start.py  webapp.py
src/bot/middleware/: user_loader.py
src/llm/: client.py  orchestrator.py
src/llm/graph/: __init__.py  graph.py  nodes.py  state.py
src/llm/prompts/: formatters.py  prompts_config.yaml  system.py
src/triage/: rules_engine.py
tests/blackbox_multiturn/: JUDGE_TEMPLATE.md  README.md  conftest.py  test_message_handler_multiturn.py  ui_app.py
tests/blackbox_multiturn/results/: multiturn_triage_report.json  multiturn_triage_report_gemini-20-flash_v1.json  multiturn_triage_report_gemini-20-flash_v2.json  multiturn_triage_report_gemini-20-flash_v3.json
tests/blackbox_multiturn/test_data/: multiturn_triage_cases.json
tests/llm/: test_graph_nodes.py
tests/triage/: test_rules_engine.py
