[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawly"
version = "0.1.0"
description = "Telegram-based AI pet care assistant"
requires-python = ">=3.12"
dependencies = [
    # Telegram bot
    "aiogram>=3.7.0",
    # HTTP server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis[asyncio]>=5.0.0",
    # Background jobs
    "arq>=0.25.0",
    # AI / LLM
    "google-genai>=1.0.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Logging
    "structlog>=24.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "deepeval>=1.0.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-p no:rerunfailures"
asyncio_mode = "auto"
testpaths = ["tests"]
